--- a/AUTHORS
+++ b/AUTHORS
@@ -5,3 +5,4 @@ Montassar Daimi <montta27@gmail.com>
 Sebri Issam <issam.sebri@holbertonschool.com>
 Mouhamed Charfi <mouhamed.charfii@holbertonschool.com>
 Mahdi Zaabi <mahdi.zaabi@holbertonschool.com>
+Iheb Chatti <iheb.chatti@holbertonschool.com>
