--- a/AUTHORS
+++ b/AUTHORS
@@ -4,3 +4,4 @@ Julien Barbier <julien@holbertonschool.com>
 Montassar Daimi <montta27@gmail.com>
 Sebri Issam <issam.sebri@holbertonschool.com>
 Mouhamed Charfi <mouhamed.charfii@holbertonschool.com>
+Youssef Belhadj <usf.belhad@gmail.com>
