--- a/AUTHORS
+++ b/AUTHORS
@@ -7,3 +7,4 @@ Mouhamed Charfi <mouhamed.charfii@holbertonschool.com>
 Mahdi Zaabi <mahdi.zaabi@holbertonschool.com>
 Iheb Chatti <iheb.chatti@holbertonschool.com>
 Youssef Belhadj <usf.belhad@gmail.com>
+Chamseddine Khedhri <chamsseddine.khedhri@gmail.com>
