--- a/AUTHORS
+++ b/AUTHORS
@@ -8,3 +8,4 @@ Mahdi Zaabi <mahdi.zaabi@holbertonschool.com>
 Iheb Chatti <iheb.chatti@holbertonschool.com>
 Youssef Belhadj <usf.belhad@gmail.com>
 Chamseddine Khedhri <chamsseddine.khedhri@gmail.com>
+achref boularess <siachrefboularess@gmail.com>
