--- a/AUTHORS
+++ b/AUTHORS
@@ -9,3 +9,4 @@ Iheb Chatti <iheb.chatti@holbertonschool.com>
 Youssef Belhadj <usf.belhad@gmail.com>
 Chamseddine Khedhri <chamsseddine.khedhri@gmail.com>
 achref boularess <siachrefboularess@gmail.com>
+Youssef Sahli <sahli.youssef@outlook.com>
