--- a/AUTHORS
+++ b/AUTHORS
@@ -10,3 +10,4 @@ Youssef Belhadj <usf.belhad@gmail.com>
 Chamseddine Khedhri <chamsseddine.khedhri@gmail.com>
 achref boularess <siachrefboularess@gmail.com>
 Youssef Sahli <sahli.youssef@outlook.com>
+Imen Ayari <imennaayari@gmail.com>
