--- a/AUTHORS
+++ b/AUTHORS
@@ -11,3 +11,4 @@ Chamseddine Khedhri <chamsseddine.khedhri@gmail.com>
 achref boularess <siachrefboularess@gmail.com>
 Youssef Sahli <sahli.youssef@outlook.com>
 Imen Ayari <imennaayari@gmail.com>
+Mohamed ali Souissi <dali-madridist@hotmail.fr>
