--- a/AUTHORS
+++ b/AUTHORS
@@ -1,14 +1,17 @@
 # This file lists all individuals having contributed content to the repository.
+# For how it is generated, see `hack/generate-authors.sh`.
 
-Julien Barbier <julien@holbertonschool.com>
-Montassar Daimi <montta27@gmail.com>
-Sebri Issam <issam.sebri@holbertonschool.com>
-Mouhamed Charfi <mouhamed.charfii@holbertonschool.com>
-Mahdi Zaabi <mahdi.zaabi@holbertonschool.com>
-Iheb Chatti <iheb.chatti@holbertonschool.com>
-Youssef Belhadj <usf.belhad@gmail.com>
-Chamseddine Khedhri <chamsseddine.khedhri@gmail.com>
-achref boularess <siachrefboularess@gmail.com>
-Youssef Sahli <sahli.youssef@outlook.com>
-Imen Ayari <imennaayari@gmail.com>
-Mohamed Ali Souissi <dali-madridist@hotmail.fr>
+achrefbs <58632121+achrefbs@users.noreply.github.com>
+Chamseddinekh <chamsseddine.khedhri@gmail.com>
+ihebchatti <chatti.iheb93@gmail.com>
+Immaannn2222 <imennaayari@gmail.com>
+KoeusIss <sebri.issam@gmail.com>
+mahdi <mahdi.zaabi@gmail.com>
+medcharfi96 <1389@holbertonschool.com>
+mohamedalisouissi25 <58598759+mohamedalisouissi25@users.noreply.github.com>
+mohamedalisouissi25 <dali-madridist@hotmail.fr>
+Myduzo <sahli.youssef@outlook.com>
+Nakadorx <nakadorx@gmail.com>
+Sebri Issam <KoeusIss@users.noreply.github.com>
+usfbelhadj <usf.belhadj@gmail.com>
+yacinekedidi <kedidiyacine@gmail.com>
