--- a/AUTHORS
+++ b/AUTHORS
@@ -3,6 +3,7 @@
 
 achrefbs <58632121+achrefbs@users.noreply.github.com>
 Chamseddinekh <chamsseddine.khedhri@gmail.com>
+hunterxx0 <azouzimhamed@gmail.com>
 ihebchatti <chatti.iheb93@gmail.com>
 Immaannn2222 <imennaayari@gmail.com>
 KoeusIss <sebri.issam@gmail.com>
