--- a/AUTHORS
+++ b/AUTHORS
@@ -17,3 +17,4 @@ Nakadorx <nakadorx@gmail.com>
 Sebri Issam <KoeusIss@users.noreply.github.com>
 usfbelhadj <usf.belhadj@gmail.com>
 yacinekedidi <kedidiyacine@gmail.com>
+Foued Dadi <foued.dadii@gmail.com>
