--- a/AUTHORS
+++ b/AUTHORS
@@ -18,3 +18,4 @@ Sebri Issam <KoeusIss@users.noreply.github.com>
 usfbelhadj <usf.belhadj@gmail.com>
 yacinekedidi <kedidiyacine@gmail.com>
 Foued Dadi <foued.dadii@gmail.com>
+Karim Bahri <karim-bahri-18@outlook.fr>
