--- a/AUTHORS
+++ b/AUTHORS
@@ -21,3 +21,4 @@ Achref boulaares <58632121+achrefbs@users.noreply.github.com>
 Hamdi ghorbel <hamdi.ghorbel645@gmail.com>
 Moez Ben Rebah <benrebah.moez@gmail.com>
 Foued lamine <fouedads@gmail.com>
+Moussaddak MEDDEB <meddeb.moussaddak@gmail.com>
