--- a/AUTHORS
+++ b/AUTHORS
@@ -19,4 +19,4 @@ Youssef belhadj <usf.belhadj@gmail.com>
 Yacine kedidi <kedidiyacine@gmail.com>
 Achref boulaares <58632121+achrefbs@users.noreply.github.com>
 Hamdi ghorbel <hamdi.ghorbel645@gmail.com>
-
+Moez Ben Rebah <benrebah.moez@gmail.com>
