--- a/AUTHORS
+++ b/AUTHORS
@@ -20,3 +20,4 @@ Yacine kedidi <kedidiyacine@gmail.com>
 Achref boulaares <58632121+achrefbs@users.noreply.github.com>
 Hamdi ghorbel <hamdi.ghorbel645@gmail.com>
 Moez Ben Rebah <benrebah.moez@gmail.com>
+Foued lamine <fouedads@gmail.com>
