--- a/AUTHORS
+++ b/AUTHORS
@@ -22,3 +22,4 @@ Hamdi ghorbel <hamdi.ghorbel645@gmail.com>
 Moez Ben Rebah <benrebah.moez@gmail.com>
 Foued lamine <fouedads@gmail.com>
 Moussaddak MEDDEB <meddeb.moussaddak@gmail.com>
+Said Skander Amireche <askander199h@outlook.com>
