author name and email

--- a/AUTHORS
+++ b/AUTHORS
@@ -23,3 +23,4 @@ Moez Ben Rebah <benrebah.moez@gmail.com>
 Foued lamine <fouedads@gmail.com>
 Moussaddak MEDDEB <meddeb.moussaddak@gmail.com>
 Said Skander Amireche <askander199h@outlook.com>
+Cirine Sassi <1410@holbertonschool.com>
