--- a/AUTHORS
+++ b/AUTHORS
@@ -13,7 +13,7 @@ medcharfi96 <1389@holbertonschool.com>
 mohamedalisouissi25 <58598759+mohamedalisouissi25@users.noreply.github.com>
 mohamedalisouissi25 <dali-madridist@hotmail.fr>
 Myduzo <sahli.youssef@outlook.com>
-Nakadorx <nakadorx@gmail.com>
+Montassar Daimi <nakadorx@gmail.com>
 Sebri Issam <KoeusIss@users.noreply.github.com>
 usfbelhadj <usf.belhadj@gmail.com>
 yacinekedidi <kedidiyacine@gmail.com>
