--- a/AUTHORS
+++ b/AUTHORS
@@ -1,21 +1,28 @@
 # This file lists all individuals having contributed content to the repository.
 # For how it is generated, see `hack/generate-authors.sh`.
 
-achrefbs <58632121+achrefbs@users.noreply.github.com>
-Chamseddinekh <chamsseddine.khedhri@gmail.com>
-hunterxx0 <azouzimhamed@gmail.com>
-ihebchatti <chatti.iheb93@gmail.com>
-Immaannn2222 <imennaayari@gmail.com>
-jaycer95 <jacer.dabbabi95@gmail.com>
-KoeusIss <sebri.issam@gmail.com>
-mahdi <mahdi.zaabi@gmail.com>
-medcharfi96 <1389@holbertonschool.com>
-mohamedalisouissi25 <58598759+mohamedalisouissi25@users.noreply.github.com>
-mohamedalisouissi25 <dali-madridist@hotmail.fr>
-Myduzo <sahli.youssef@outlook.com>
-Montassar Daimi <nakadorx@gmail.com>
-Sebri Issam <KoeusIss@users.noreply.github.com>
-usfbelhadj <usf.belhadj@gmail.com>
-yacinekedidi <kedidiyacine@gmail.com>
+Julien Barbier <julien@holbertonschool.com>
 Foued Dadi <foued.dadii@gmail.com>
+Sebri Issam  <sebri.issam@gmail.com>
+Montassar Daimi <nakadorx@gmail.com>
+Mohamed charfi <1389@holbertonschool.com>
+Mohamed azouzi <azouzimhamed@gmail.com>
+Iheb Chatti <chatti.iheb93@gmail.com>
+Chamsseddine Khedhri <chamsseddine.khedhri@gmail.com>
 Karim Bahri <karim-bahri-18@outlook.fr>
+Imen Ayari <imennaayari@gmail.com>
+Jacer Dabbabi <jacer.dabbabi95@gmail.com>
+Mahdi Zaabi <mahdi.zaabi@gmail.com>
+Mohamed ali souissi  <dali-madridist@hotmail.fr>
+Youssef sahli <sahli.youssef@outlook.com>
+Youssef belhadj <usf.belhadj@gmail.com>
+Yacine kedidi <kedidiyacine@gmail.com>
+Achref boulaares <58632121+achrefbs@users.noreply.github.com>
+
+
+
+
+
+
+
+
