--- a/AUTHORS
+++ b/AUTHORS
@@ -18,4 +18,5 @@ Youssef sahli <sahli.youssef@outlook.com>
 Youssef belhadj <usf.belhadj@gmail.com>
 Yacine kedidi <kedidiyacine@gmail.com>
 Achref boulaares <58632121+achrefbs@users.noreply.github.com>
+Hamdi ghorbel <hamdi.ghorbel645@gmail.com>
 
