--- a/AUTHORS
+++ b/AUTHORS
@@ -24,3 +24,4 @@ Foued lamine <fouedads@gmail.com>
 Moussaddak MEDDEB <meddeb.moussaddak@gmail.com>
 Said Skander Amireche <askander199h@outlook.com>
 Cirine Sassi <1410@holbertonschool.com>
+Mahdi Ben zouitina <ben.zouitina.mahdi97@gmail.com>
