--- a/AUTHORS
+++ b/AUTHORS
@@ -25,3 +25,4 @@ Moussaddak MEDDEB <meddeb.moussaddak@gmail.com>
 Said Skander Amireche <askander199h@outlook.com>
 Cirine Sassi <1410@holbertonschool.com>
 Mahdi Ben zouitina <ben.zouitina.mahdi97@gmail.com>
+khawla jlassi <1391@holbertonschool.com>
