--- a/AUTHORS
+++ b/AUTHORS
@@ -27,3 +27,4 @@ Cirine Sassi <1410@holbertonschool.com>
 Mahdi Ben zouitina <ben.zouitina.mahdi97@gmail.com>
 khawla jlassi <1391@holbertonschool.com>
 Taha Elleuch <tahaeleuch@gmail.com>
+Hachem Hfaiedh <hechemhfaiedh@gmail.com>
