--- a/AUTHORS
+++ b/AUTHORS
@@ -26,3 +26,4 @@ Said Skander Amireche <askander199h@outlook.com>
 Cirine Sassi <1410@holbertonschool.com>
 Mahdi Ben zouitina <ben.zouitina.mahdi97@gmail.com>
 khawla jlassi <1391@holbertonschool.com>
+Taha Elleuch <tahaeleuch@gmail.com>
